--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,7 +3,7 @@
     <h1>The new IMDB</h1>
     <h2>The best <strong>movie listing</strong> website !</h2>
     <p>Store and comment your films in lists.</p>
-    <a class="btn btn-flat" href="new">Create your list</a>
+    <%= link_to "Create your list", new_list_path, class: "btn btn-flat" %>
   </div>
 </div>
 
