--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -5,12 +5,25 @@
 .btn-flat {
   color: white;
   padding: 8px 24px;
-  border-radius: 4px;
-  background: #1EDD88;
+  border-radius: 2px;
+  background: #1EDD8882;
   transition: background 0.3s ease;
 }
 
 .btn-flat:hover {
   background: #1BCB7F;
+  color: white;
+}
+
+.btn-flat-two {
+  color: white;
+  padding: 8px 24px;
+  border-radius: 2px;
+  background: #dd1e2882;
+  transition: background 0.3s ease;
+}
+
+.btn-flat-two:hover {
+  background: #dd1e28;
   color: white;
 }
