--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,8 +1,13 @@
+<div class="forms_banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/random);">
+  <div class="container">
+    <h1>Add a movie to your list</h1>
+  </div>
+</div>
 
-<div>
+<div class="forms">
   <%= simple_form_for([@list, @bookmark]) do |f| %>
     <%= f.input :comment %>
     <%= f.association :movie %>
-    <%= f.submit "Add movie", class: "btn btn-primary" %>
+    <div class= "link"><%= f.submit "Add Movie", class: "btn btn-flat" %> | <%= link_to "Go back to home", lists_path, class: "btn btn-flat-two" %> </div>
   <% end %>
 </div>
