--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -12,9 +12,21 @@
   <% @lists.each do |list| %>
   <% i=0 %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/random/<%=i+=1%>)">
-      <li class= "link"><%= link_to list.name, list_path(list), class: "btn btn-flat" %> | <%= link_to "delete list", list_path(list), method: :delete,
-              data: { confirm: "Are you sure?" }, class: "btn btn-flat" %> </li>
+      <li class= "link"><%= link_to list.name, list_path(list), class: "btn btn-flat" %> | <%= link_to "Delete list", list_path(list), method: :delete,
+              data: { confirm: "Are you sure you want to delete this list?" }, class: "btn btn-flat-two" %> </li>
     </div>
   <% end %>
   </ul>
+</div>
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    This footer is made with <i class="fas fa-heart"></i> by Antoine Thiran
+  </div>
 </div>
